--- a/manifest.yml
+++ b/manifest.yml
@@ -5,4 +5,4 @@ description: The sentencizer splits text into sentences.
 author: Jina AI Dev-Team (dev-team@jina.ai)
 url: https://github.com/jina-ai/executor-text-sentencizer
 avatar: https://avatars.githubusercontent.com/u/60539444?s=200&v=4
-keywords: [text, sentence, split]
+keywords: [text, sentencizer]
